--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,3 @@
-#Build stuff##
 version: 0.2
 
 phases:
@@ -9,16 +8,25 @@ phases:
       - echo "Installing dependencies..."
       - cd app # Change directory to app
       - mvn install -DskipTests
+
   build:
     commands:
       - echo "Building project..."
       - mvn -B package
+
   post_build:
     commands:
       - echo "Build completed successfully!"
+      - echo "Downloading Veracode Pipeline Scanner..."
+      - curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
+      - unzip -o pipeline-scan-LATEST.zip -d pipeline-scan
+      - echo "Running Veracode Pipeline Scan..."
+      - java -jar pipeline-scan/pipeline-scan.jar \
+          --vid $VERACODE_API_ID \
+          --vkey $VERACODE_API_KEY \
+          --file app/target/verademo.war
+      - echo "Veracode scan completed successfully!"
 
 artifacts:
   files:
     - app/target/*.war # Look for the .war file
-
-
