--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,6 +20,8 @@ phases:
       - echo "Downloading Veracode Pipeline Scanner..."
       - curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
       - unzip -o pipeline-scan-LATEST.zip -d pipeline-scan
+      - echo "Setting permissions for .war file..."
+      - chmod 644 app/target/verademo.war
       - echo "Running Veracode Pipeline Scan..."
       - |
         java -jar pipeline-scan/pipeline-scan.jar \
