--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,14 @@ phases:
       - echo "Building project..."
       - mvn -B package # Building the project
 
+  post_build:
+    commands:
+      - echo "Retrieving Veracode API keys from Secrets Manager..."
+      - export VID=$(aws secretsmanager get-secret-value --secret-id veracode_keys --query 'SecretString' --output text | jq -r '.VID')
+      - export VKEY=$(aws secretsmanager get-secret-value --secret-id veracode_keys --query 'SecretString' --output text | jq -r '.VKEY')
+      - echo "Running Veracode static analysis..."
+      - java -jar /opt/veracode/api-wrapper.jar -action uploadandscan -vid $VID -vkey $VKEY -appname veracodevince_aws -createprofile true -version $(date +%Y-%m-%d-%H:%M) -filepath target/*.war -sandboxname your-sandbox -createsandbox false
+
 artifacts:
   files:
     - target/*.war
