--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,11 @@ phases:
       - echo "Installing dependencies..."
       - cd app # Change directory to app
       - mvn install -DskipTests # Installing dependencies without tests
+      - echo "Installing jq..."
+      - yum install -y jq  # Installing jq to parse JSON responses
+      - echo "Downloading Veracode API wrapper..."
+      - curl -O https://download.veracode.com/securityscan/api-wrapper/VeracodeAPIWrapper-2.0.0.jar # Example URL for Veracode API wrapper download
+      - mv VeracodeAPIWrapper-2.0.0.jar /opt/veracode/api-wrapper.jar # Move the downloaded JAR to the required location
 
   build:
     commands:
