--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,12 +19,16 @@ phases:
       - docker pull veracode/api-wrapper-java  # Pull Veracode API wrapper Docker image
 
   post_build:
-    commands:
-      - echo "Retrieving Veracode API keys from Secrets Manager..."
-      - export VID=$(aws secretsmanager get-secret-value --secret-id veracode_keys --query 'SecretString' --output text | jq -r '.VID')
-      - export VKEY=$(aws secretsmanager get-secret-value --secret-id veracode_keys --query 'SecretString' --output text | jq -r '.VKEY')
-      - echo "Running Veracode static analysis..."
-      - docker run --rm -e VID=$VID -e VKEY=$VKEY -v $(pwd)/target:/veracode-wrapper -w /veracode-wrapper veracode/api-wrapper-java bash -c "java -jar /veracode-wrapper/VeracodeAPIWrapper-2.0.0.jar -action uploadandscan -vid $VID -vkey $VKEY -appname veracodevince_aws -createprofile true -version $(date +%Y-%m-%d-%H:%M) -filepath target/*.war -sandboxname your-sandbox -createsandbox false"
+  commands:
+    - echo "Retrieving Veracode API keys from Secrets Manager..."
+    - export VID=$(aws secretsmanager get-secret-value --secret-id veracode_keys --query 'SecretString' --output text | jq -r '.VID')
+    - export VKEY=$(aws secretsmanager get-secret-value --secret-id veracode_keys --query 'SecretString' --output text | jq -r '.VKEY')
+    - echo "VID is: $VID"
+    - echo "VKEY is: $VKEY"
+    - echo "Listing files in /veracode-wrapper..."
+    - ls -l /veracode-wrapper
+    - echo "Running Veracode static analysis..."
+    - docker run --rm -e VID=$VID -e VKEY=$VKEY -v $(pwd)/target:/veracode-wrapper -w /veracode-wrapper veracode/api-wrapper-java bash -c "java -jar /veracode-wrapper/VeracodeAPIWrapper-2.0.0.jar -action uploadandscan -vid $VID -vkey $VKEY -appname veracodevince_aws -createprofile true -version $(date +%Y-%m-%d-%H:%M) -filepath target/*.war -sandboxname your-sandbox -createsandbox false"
 
 artifacts:
   files:
