--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,10 +12,12 @@ phases:
       - apt-get update && apt-get install -y jq  # Install jq using apt-get
       - echo "Downloading Veracode API wrapper..."
       - aws s3 cp s3://veracode-api-wrapper-bucket/vosp-api-wrappers-java-24.10.15.0-dist.zip /opt/veracode/api-wrapper.zip  # Correct file path
+      - echo "Listing files in /opt/veracode/ before extraction"
+      - ls -l /opt/veracode/  # List files before extraction
       - echo "Extracting Veracode API wrapper..."
       - unzip /opt/veracode/api-wrapper.zip -d /opt/veracode/  # Unzipping the API wrapper
-      - echo "Listing files in /opt/veracode/ to check if the .jar exists"
-      - ls -l /opt/veracode/  # List files to check if the .jar file exists
+      - echo "Listing files in /opt/veracode/ after extraction"
+      - ls -l /opt/veracode/  # List files after extraction
 
   build:
     commands:
@@ -34,6 +36,7 @@ artifacts:
   files:
     - target/*.war
   name: build-output
+
 
 
 
