--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,4 @@
-version: 0.2 ####
+version: 0.2
 
 phases:
   install:
@@ -12,6 +12,9 @@ phases:
       - apt-get update && apt-get install -y jq  # Install jq using apt-get
       - echo "Downloading Veracode API wrapper JAR from S3..."
       - aws s3 cp s3://veracode-api-wrapper-bucket/VeracodeJavaAPI.jar /opt/veracode/api-wrapper.jar  # Fetch Veracode wrapper from S3
+      - echo "Verifying file download..."
+      - aws s3 ls s3://veracode-api-wrapper-bucket/VeracodeJavaAPI.jar # This will check if the file exists in the bucket
+      - ls -l /opt/veracode/   # Check if the API wrapper was downloaded successfully
 
   build:
     commands:
@@ -24,12 +27,13 @@ phases:
       - export VID=$(aws secretsmanager get-secret-value --secret-id veracode_keys --query 'SecretString' --output text | jq -r '.VID')
       - export VKEY=$(aws secretsmanager get-secret-value --secret-id veracode_keys --query 'SecretString' --output text | jq -r '.VKEY')
       - echo "Running Veracode static analysis..."
-      - java -jar /opt/veracode/api-wrapper.jar -action uploadandscan -vid $VID -vkey $VKEY -appname veracodevince_aws -createprofile true -version $(date +%Y-%m-%d-%H:%M) -filepath target/*.war -createsandbox false
+      - java -jar /opt/veracode/api-wrapper.jar -action uploadandscan -vid $VID -vkey $VKEY -appname veracodevince_aws -createprofile true -version $(date +%Y-%m-%d-%H:%M) -filepath target/*.war -createsandbox false || echo "Error executing Veracode scan"
 
 artifacts:
   files:
     - target/*.war
   name: build-output
+
 
 
 
